{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 7,
  "lineage": "d8d80706-2eef-c5d3-f7fd-1f732af8d3f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].r1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0601422bf6afa8ac3",
            "arn": "arn:aws:ec2:us-east-1:663666505368:instance/i-05cc2b39a1ecf7353",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cc2b39a1ecf7353",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "two-region-key-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f727a2aa221a6b5f"
              }
            ],
            "primary_network_interface_id": "eni-0f727a2aa221a6b5f",
            "private_dns": "ip-172-31-17-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.95",
            "public_dns": "ec2-13-218-233-73.compute-1.amazonaws.com",
            "public_ip": "13.218.233.73",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01862117a2395d7fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "two-region-sg-us-east-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7c38828fc5c99f4",
            "tags": {
              "Name": "two-region-instance-us-east-1",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Name": "two-region-instance-us-east-1",
              "Region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1919235f03af197"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "i-05cc2b39a1ecf7353",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.kp_r1",
            "aws_security_group.sg_r1",
            "data.aws_ami.r1_amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].r2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-069f9cce803c015bc",
            "arn": "arn:aws:ec2:us-west-2:663666505368:instance/i-08039939caddc81e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08039939caddc81e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "two-region-key-us-west-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08b591a3ca74d7594"
              }
            ],
            "primary_network_interface_id": "eni-08b591a3ca74d7594",
            "private_dns": "ip-172-31-24-43.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.43",
            "public_dns": "ec2-35-91-171-118.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.171.118",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d619be2325af4f96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "two-region-sg-us-west-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0086f17d722dcc147",
            "tags": {
              "Name": "two-region-instance-us-west-2",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Name": "two-region-instance-us-west-2",
              "Region": "us-west-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e9b1b9ea6d3bb1a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "i-08039939caddc81e0",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.kp_r2",
            "aws_security_group.sg_r2",
            "data.aws_ami.r2_amzn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].r1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663666505368:security-group/sg-0f1919235f03af197",
            "description": "Allow SSH ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1919235f03af197",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "two-region-sg-us-east-1",
            "name_prefix": "",
            "owner_id": "663666505368",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0357b2b91191ee6ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "sg-0f1919235f03af197",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].r2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:663666505368:security-group/sg-08e9b1b9ea6d3bb1a",
            "description": "Allow SSH ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e9b1b9ea6d3bb1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "two-region-sg-us-west-2",
            "name_prefix": "",
            "owner_id": "663666505368",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04e38360f7d6b9b6a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "sg-08e9b1b9ea6d3bb1a",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}